--- a/Changes.txt
+++ b/Changes.txt
@@ -1,3 +1,10 @@
+Changes for 0.0.2 (2017-7-24)
+--------------------------------------------------------------------------------
+
+New features:
+* Zabbixホスト項目をIPアドレス(ip)からサーバー名(server_name)に変更
+* config_zabbix.groovy に Redmineチケット項目パラメータfixed_items, default_values, required_items を追加
+
 Changes for 0.0.1 (2016-12-5)
 --------------------------------------------------------------------------------
 
